components/Columns.module.scss
@use '@/app/base';

.columns,
.columnsGrid {
	display: flex;
}

.column {
	flex: 1;
	overflow: hidden;
	position: relative;
	margin: 0;

	video {
		object-fit: cover;
		min-width: 100%;
		min-height: 100%;
		position: absolute;
		left: 50%;
		transform: translateX(-50%);
		z-index: -1;
	}

	img {
		z-index: -1;
		object-position: center;
		transition: 0.3s;
	}
}

.fullHeight {
	height: 100vh;
}

.defaultHeight {
	height: 650px;
}

.link:hover {
	img {
		transform: scale(1.1);
	}
}

.sectionTitle {
	margin-bottom: 4rem;
}

.content {
	// width: 90%;
	// max-width: 1440px;
	margin: 0 auto;
	padding: 4rem 0;
	height: 100%;
	position: relative;
	display: flex;
	flex-direction: column;
	gap: 1.5rem;
}

.buttons {
	margin-top: 0.5rem;
	display: flex;
	gap: 1rem;
}

.controls {
	width: 90vw;
	max-width: 1440px;
	margin: 0 auto;
	position: absolute;
	bottom: 0;
	left: 50%;
	transform: translateX(-50%);
	z-index: 1;
}

.playIcon {
	position: absolute;
	bottom: 2rem;
	left: 0;
	cursor: pointer;
}

.muteIcon {
	position: absolute;
	bottom: 2rem;
	left: 2rem;
	cursor: pointer;
}

// Text on top of the image
.text {
	display: flex;
	flex-direction: column;
	gap: 1rem;

	* {
		text-wrap: balance;
	}
}

// Title below the image
.belowText {
	position: absolute;
	bottom: -32px;
	width: 100%;
	background-color: white;
	padding: 1rem 1rem 2rem 1rem;

	* {
		color: black !important;
	}
}

// Dynamic text styles

.whiteText {
	* {
		color: white;
	}
}

.blackText {
	* {
		color: black;
	}
}

.centerAlign {
	* {
		text-align: center;
	}
}

.leftAlign {
	* {
		text-align: left;
	}
}

.rightAlign {
	* {
		text-align: right;
	}
}

.third {
	width: 33%;
}

@media screen and (max-width: 1024px) {
	.columns {
		flex-direction: column;
	}

	.columnsGrid {
		display: grid;
		grid-template-columns: repeat(2, 1fr);
		gap: 1rem;
		padding: 0 5vw;
	}

	.column {
		flex: auto;
	}

	.content {
		max-width: 90%;
		padding-left: 0 !important;
		padding-right: 0 !important;
	}

	.columnGrid {
		height: 320px !important;
	}

	.text {
		display: flex;
		flex-direction: column;
		gap: 1rem;
	}

	.third {
		width: 100%;
	}
}

@media screen and (max-width: 768px) {
	.buttons {
		flex-direction: column;
		align-items: center;
	}
}

